objects/Vetting_Questionnaire__c.object
<CustomObject>
    <fields>
        <fullName>AE_Patched_Chair_Quantity__c</fullName>
        <label>AE Patched Chair Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AE_Premium_Chair__c</fullName>
        <label>AE Premium Chair Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Accel_Establishment_Type__c</fullName>
        <formula>TEXT(Vetting_Questionnaire_RelatedList__r.Account.Location_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accel Establishment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Vetting_Questionnaires</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_of_Business__c</fullName>
        <label>Age of Business</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;3 years</fullName>
                </value>
                <value>
                    <fullName>3-6 years</fullName>
                </value>
                <value>
                    <fullName>6+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allows_6th_VGT__c</fullName>
        <formula>TEXT(Account__r.MunicipalityLookup__r.Allows_6th_VGT__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allows 6th VGT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amusement_Operator__c</fullName>
        <formula>Account__r.Amusement_Operator__r.FirstName &amp; &quot;&quot; &amp; Account__r.Amusement_Operator__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amusement Operator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_VGTs_running_the_latest_software__c</fullName>
        <label>Are VGTs running the latest software?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Are_VGTs_set_to_avoid_air_vents__c</fullName>
        <label>Are VGTs set to avoid air vents?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_VGTs_set_to_minimize_glare__c</fullName>
        <label>Are VGTs set to minimize glare?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_VGTs_set_to_minimize_glare_vents__c</fullName>
        <label>Are VGTs set to minimize glare &amp; vents?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_the_VGT_fans_clean__c</fullName>
        <label>Are the VGT fans clean?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Completed_Date__c</fullName>
        <label>Assessment Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assessment_Notes__c</fullName>
        <label>Assessment Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Partially Complete</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assessment_Type__c</fullName>
        <defaultValue>&quot;Location&quot;</defaultValue>
        <label>Assessment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
                <value>
                    <fullName>Location Signage Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Average_TTM_HPD_of_5_nearest_locations__c</fullName>
        <label>Average TTM HPD of 5 nearest locations</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Average_age_of_customers__c</fullName>
        <label>Average age of customers?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Hours_Validated__c</fullName>
        <label>Business Hours Validated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cash_Only__c</fullName>
        <label>Cash Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Characteristics__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Characteristics</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Beer Garden</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Full Service Bar</fullName>
                </value>
                <value>
                    <fullName>Minors</fullName>
                </value>
                <value>
                    <fullName>Minors allowed occasionally</fullName>
                </value>
                <value>
                    <fullName>No Minors</fullName>
                </value>
                <value>
                    <fullName>Party Room</fullName>
                </value>
                <value>
                    <fullName>Separate Gaming Room</fullName>
                </value>
                <value>
                    <fullName>Smoking Room</fullName>
                </value>
                <value>
                    <fullName>Strip Mall</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Web Page</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compare_to_nearest_successful_business__c</fullName>
        <label>Compare to nearest successful business</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_TO_pulled_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor TO pulled out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_VGT_1__c</fullName>
        <label>Competitor VGT 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor_VGTs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_VGT_2__c</fullName>
        <label>Competitor VGT 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor_VGTs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_VGT_3__c</fullName>
        <label>Competitor VGT 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitor_VGTs</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completed_Fields_Count__c</fullName>
        <label>Completed Fields Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Entree__c</fullName>
        <label>Cost per Entree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;$10</fullName>
                </value>
                <value>
                    <fullName>$10-$20</fullName>
                </value>
                <value>
                    <fullName>&gt;$20</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Card_Processor__c</fullName>
        <label>Credit Card Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_has_VGTs_on_site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently has VGTs on site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Chair_Quantity__c</fullName>
        <label>Custom Chair Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Gaming_Spacers_Quantity__c</fullName>
        <label>Custom Gaming Spacers Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Describe_current_gaming_area_layout__c</fullName>
        <label>Describe current gaming area layout</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_general_housing_in_that_area__c</fullName>
        <inlineHelpText>apartments, single family homes</inlineHelpText>
        <label>Describe general housing in that area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Describe_the_general_surroundings__c</fullName>
        <inlineHelpText>rural, small town, suburban, urban</inlineHelpText>
        <label>Describe the general surroundings?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_they_have_a_full_service_bar__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do they have a full service bar?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_they_have_other_entertainment__c</fullName>
        <inlineHelpText>live music, events, bar bingo, trivia</inlineHelpText>
        <label>Do they have other entertainment?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_bartender_have_easy_access_to_area__c</fullName>
        <label>Does bartender have easy access to area?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Does_competitor_have_a_loyalty_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does competitor have a loyalty program?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Does_the_owner_have_other_locations__c</fullName>
        <label>Does the owner have other locations?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Establishment_parking_conditions__c</fullName>
        <inlineHelpText>Street, Front Lot, Back Lot, Meter</inlineHelpText>
        <label>Establishment parking conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Time_to_Go_Live__c</fullName>
        <label>Estimated Time to Go Live?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-6 months</fullName>
                </value>
                <value>
                    <fullName>6-12 months</fullName>
                </value>
                <value>
                    <fullName>18+ months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Marketing_Advert_Strategies__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Existing Marketing/Advert Strategies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Proposed_Gaming_Area_Segregaton__c</fullName>
        <label>Existing/Proposed Gaming Area Segregaton</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Half Wall</fullName>
                </value>
                <value>
                    <fullName>Separate Room</fullName>
                </value>
                <value>
                    <fullName>Stanchions</fullName>
                </value>
                <value>
                    <fullName>None (open area)</fullName>
                </value>
                <value>
                    <fullName>Temporary Partition Wall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expectations_of_change_from_Accel__c</fullName>
        <label>Expectations of change from Accel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explain_the_business_model__c</fullName>
        <label>Explain the business model?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Explain_why_location_doesn_t_have_gaming__c</fullName>
        <label>Explain why location doesn&apos;t have gaming</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facebook_Rating__c</fullName>
        <label>Facebook Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gaming_locations_in_walking_distance__c</fullName>
        <label>Gaming locations in walking distance?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Block</fullName>
                </value>
                <value>
                    <fullName>2 Blocks</fullName>
                </value>
                <value>
                    <fullName>3 Blocks</fullName>
                </value>
                <value>
                    <fullName>&gt; 3 Blocks</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Surroundings__c</fullName>
        <label>General Surroundings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rural</fullName>
                </value>
                <value>
                    <fullName>Small Town</fullName>
                </value>
                <value>
                    <fullName>Suburban</fullName>
                </value>
                <value>
                    <fullName>Urban</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Rating__c</fullName>
        <label>Google Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_VGTs_does_location_have__c</fullName>
        <label>How many VGTs does location have?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_many_patrons__c</fullName>
        <label>How many patrons were there?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_might_location_improve_revenue__c</fullName>
        <label>How might location improve revenue?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_other_chair__c</fullName>
        <label>If other chair, please specify</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_which_location__c</fullName>
        <label>If yes, which location(s)?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_gaming_are_clean_and_clutter_free__c</fullName>
        <label>Is gaming are clean and clutter free?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_gaming_area_clutter_free__c</fullName>
        <label>Is the gaming area clutter free?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_owner_interested_in_6th_machine__c</fullName>
        <label>Is the owner interested in 6th machine?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_the_redemption_device_in_gaming_area__c</fullName>
        <label>Is the redemption device in gaming area?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_direct_line_of_sight__c</fullName>
        <label>Is there direct line of sight?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_there_gaming_marketing_outside__c</fullName>
        <label>Is there gaming marketing outside?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Status_Change_Date_Time__c</fullName>
        <label>Last Status Change Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>List_nearest_3_gaming_locations__c</fullName>
        <label>List nearest 3 gaming locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_Size__c</fullName>
        <label>Location Size (Sq. Ft.)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt; 2k</fullName>
                </value>
                <value>
                    <fullName>2k - 4k</fullName>
                </value>
                <value>
                    <fullName>&gt; 4k</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Majestic_AE_Gaming_Stool_Quantity__c</fullName>
        <label>Majestic AE Gaming Stool Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Managements_plan_to_improve_weaknesses__c</fullName>
        <label>Managements plan to improve weaknesses?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marked_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes the user indicated this assessment is complete.</inlineHelpText>
        <label>Mark As Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_advertising_offered_by_comp_TO__c</fullName>
        <inlineHelpText>Look at Facebook, Yelp, Twitter, etc.</inlineHelpText>
        <label>What are competitor marketing strategies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_advertising_recommendations__c</fullName>
        <inlineHelpText>Please include photos (attach them to the opportunity)</inlineHelpText>
        <label>Marketing &amp; advertising recommendations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Media_Presence__c</fullName>
        <label>Media Presence</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Yelp</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minimum_72_Hours_of_Operation__c</fullName>
        <label>Minimum 72 Hours of Operation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Person_Submitting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Person Submitting</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Location_Assessments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_of_nearest_bar_with_gaming__c</fullName>
        <label>Name of nearest bar with gaming?</label>
        <length>220</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Corporation__c</fullName>
        <label>New Corporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Owners__c</fullName>
        <label>New Owners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Terminals__c</fullName>
        <label>Number of Terminals</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Chair_Quantity__c</fullName>
        <label>Other Chair Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POS_System__c</fullName>
        <label>POS System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking_Conditions__c</fullName>
        <inlineHelpText>Select all that apply</inlineHelpText>
        <label>Parking Conditions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>Front Lot</fullName>
                </value>
                <value>
                    <fullName>Back Lot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parking__c</fullName>
        <label>Parking</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>On-site parking lot (7 spaces or below)</fullName>
                </value>
                <value>
                    <fullName>On-site parking lot (above 7 spaces)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patron_s_under_21_allowed_to_enter__c</fullName>
        <label>Patron&apos;s under 21 allowed to enter?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Percentage_Completed__c</fullName>
        <formula>Completed_Fields_Count__c /32</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Placement_of_gaming_area__c</fullName>
        <label>Placement of gaming area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Placement_of_proposed_gaming_area__c</fullName>
        <label>Placement of proposed gaming area?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Predicted_TTM_based_on_surroundings__c</fullName>
        <label>Predicted TTM based on surroundings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Gaming_Experience__c</fullName>
        <inlineHelpText>For existing locations, were the locations with another TO?</inlineHelpText>
        <label>Previous Gaming Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Future_Changes_Location__c</fullName>
        <label>Proposed Future Changes to Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Construction</fullName>
                </value>
                <value>
                    <fullName>Remodel</fullName>
                </value>
                <value>
                    <fullName>Change of entertainment</fullName>
                </value>
                <value>
                    <fullName>Change of food/drink</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Number_of_VGTs__c</fullName>
        <label>Proposed Number of VGTs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_gaming_area_in_relation_to_bar__c</fullName>
        <label>Proposed gaming area in relation to bar</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-3 Feet</fullName>
                </value>
                <value>
                    <fullName>4-6 Feet</fullName>
                </value>
                <value>
                    <fullName>7-9 Feet</fullName>
                </value>
                <value>
                    <fullName>&gt; 9 Feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_gaming_area_segragation__c</fullName>
        <label>Proposed gaming area segragation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Separate Room</fullName>
                </value>
                <value>
                    <fullName>Half Wall</fullName>
                </value>
                <value>
                    <fullName>Stanchions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProximityToBathroom__c</fullName>
        <label>Proximity to Bathroom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 5 feet</fullName>
                </value>
                <value>
                    <fullName>5 to 10 feet</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProximityToMainEntrance__c</fullName>
        <label>Proximity to Main Entrance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proximity to Main Entrance</fullName>
                </value>
                <value>
                    <fullName>Less than 5 feet</fullName>
                </value>
                <value>
                    <fullName>5 to 10 feet</fullName>
                </value>
                <value>
                    <fullName>Greater than 10 feet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proximity_to_Bathroom__c</fullName>
        <label>Proximity to Bathroom (ft)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proximity_to_Main_Entrance_ft__c</fullName>
        <label>Proximity to Main Entrance (ft)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proximity_to_closest_highway_exit_cstore__c</fullName>
        <inlineHelpText>If the location is a c-store or truck stop. please enter a mileage value here.</inlineHelpText>
        <label>Proximity to closest highway exit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>